--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^11.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
