--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,24 +12,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.9",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@stripe/stripe-js": "^7.3.0",
     "bootstrap": "^5.3.5",
     "bootswatch": "^5.3.5",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^17.0.0",
+    "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "stripe": "^18.1.0",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
     "xng-breadcrumb": "^11.0.0",
